Nav spacing fix on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -135,6 +135,10 @@ body {
       line-height: 12px;
       top: 14px;
       right: 9px;
+
+      a {
+        margin-left: 10px;
+      }
     }
 
     .youHeard {
